--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@ng-bootstrap/ng-bootstrap": "^4.0.1",
     "bootstrap": "^4.2.1",
     "core-js": "^2.5.4",
+    "moment": "^2.23.0",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "webpack-dev-server": "^3.1.14",
