--- a/restfulapi_orm/package.json
+++ b/restfulapi_orm/package.json
@@ -1,7 +1,7 @@
 {
   "name": "restfulapi_orm",
   "version": "1.0.0",
-  "description": "",
+  "description": "A restful API with express.js and JWT",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.4",
+    "jsonwebtoken": "^8.4.0",
     "mysql": "^2.16.0",
     "mysql2": "^1.6.4",
     "sequelize": "^4.42.0",
