--- a/restfulapi_orm/package.json
+++ b/restfulapi_orm/package.json
@@ -15,7 +15,6 @@
     "jsonwebtoken": "^8.5.1",
     "mysql": "^2.17.1",
     "mysql2": "^1.6.5",
-    "sequelize": "^4.44.2",
-    "sequelize-auto": "^0.4.29"
+    "sequelize": "^6.0.0"
   }
 }
