Using now docker deploy stack to create the services. Added correct instructions to automatically initialize the databases to have the app up and running right after deploy

--- a/restfulapi_orm/Dockerfile
+++ b/restfulapi_orm/Dockerfile
@@ -15,7 +15,7 @@ RUN npm install
 
 # Get all the code needed to run the app
 COPY . /usr/src/app
-
+COPY node_modules/sequelize/lib/dialects/abstract/query-generator.js /usr/src/app/node_modules/sequelize/lib/dialects/abstract/query-generator.js
 # Expose the port the app runs in
 EXPOSE 3000
 
